<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addsongtitle"
        android:textSize="32dip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songadd"/>

    <EditText
        android:id="@+id/songadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artistadd"/>

    <EditText
        android:id="@+id/artistadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearadd"/>

    <EditText
        android:id="@+id/yearadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/addsongButton" android:text="@string/addButton" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/response" />

</LinearLayout>
